example/example.css
html,
body {
    height: 100%;
    width: 100%;
    overflow: hidden;
}

div::-webkit-scrollbar {
    width: 6px;
    border-radius: 15px;
    height: 10px
}

::-webkit-scrollbar-thumb {
    border-radius: 15px;
    background: #888;
}

::-webkit-scrollbar-thumb:window-inactive {
    background: rgba(100, 100, 100, 0.4);
}

::-webkit-scrollbar-track {
    border-radius: 15px;
    background: #eee;
}

#example-container {
    height: 100%;
    width: 100%;
}

#example-schedule {
    border: 1px solid #000000;
    display: inline-block;
    margin-left: 10px;
    height: calc(100% - 70px);
}

#example-work-space {
    padding: 10px;
}

#example-times {
    float: left;
    height: 100%;
    overflow: hidden;
}

#example-appointments {
    height: 100%;
    width: calc(100vw - 100px);
    float: right;
    position: relative;
    overflow: auto;
}

.example-time {
    width: 48px;
    border: 1px solid #000000;
    border-bottom: none;
    border-left: none;
    text-align: center;
    font-size: 14px;
    box-sizing: border-box;
}

.example-time-first {
    border-top: none !important;
}

.appointment-time {
    border-top: 1px solid #000000;
    box-sizing: border-box;
}

.appointment-time-interval {
    border-top: 1px dotted #000000;
    box-sizing: border-box;
}

.example-time,
.appointment-time,
.appointment-time-interval {
    height: 24px;
}

.appointment-time-interval-first {
    border-top: none !important;
}

.example-appointment {
    border-radius: 5px;
    position: absolute;
    background: linear-gradient(#ff22aa, #00ccee);
    color: #ffffff;
    border: 1px solid #000000;
    z-index: 5;
    box-sizing: border-box;
    text-align: center;
}

.example-times-scroll-spacer {
    border-top: 1px solid #000000;
    height: 50px;
    background-color: #ffffff;
}

